--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env DB_ENV=testing jest --watch --runInBand",
     "start": "node index.js",
     "server": "nodemon index.js"
   },
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/BW-Pintereach-2/back-end#readme",
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
